# faust

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bench.py  noxfile.py  plot.py  pyproject.toml
bench/: plot.py  results-new.csv  results.csv  run.py
src/faust/: __init__.py  _compat.py  _datetime.py  bench.py  models.py  plot.py  tools.py
src/faust/_pydantic_v1/: base_model.py  models.py
src/faust/_pydantic_v1/strict/: models.py
src/faust/_pydantic_v2/: base_model.py  models.py  settings.py
src/faust/_pydantic_v2/strict/: models.py
src/faust/strict/: models.py
src/mymodels/: __init__.py  _datetime.py  models.py  tools.py
src/mymodels/_pydantic_v1/: base_model.py  models.py
src/mymodels/_pydantic_v1/strict/: models.py
src/mymodels/_pydantic_v2/: base_model.py  models.py  settings.py
src/mymodels/_pydantic_v2/strict/: models.py
src/mymodels/strict/: models.py
tests/: test_models.py  test_strict_models.py
tests/data/: AnyClass124.json  AnyClass128.json  AnyClass129.json  AnyClass130.json  AnyClass132.json
