[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[dependency-groups]
dev = [
  'astor>=0.8.1',
  'faker',
  'pytest-datadir>=1.5.0',
  'pytest>=8.3.3',
  'ruff>=0.8.1',
  'nox>=2024.10.9',
  'py-spy>=0.4.0',
  'polars>=1.16.0',
  'plotly[express]==6.0.0rc0',
  'kaleido==0.2.1',
]


[project]
authors = [
  { name = 'Marco de Lannoy Kobayashi', email = 'mdlkdev@gmail.com' },
  { name = 'Sitt Guruvanich', email = 'aekazitt+github@gmail.com' },
]
classifiers = [
  'Private :: Do Not Upload',
]
name = 'faust'
version = '0.1.0'
description = 'A set of pydantic models that elicit slow startup times in pydantic v2 (for now)'
requires-python = '>=3.13'
dependencies = ['pydantic>=1.10.18']
readme = 'README.md'

[project.scripts]
faust = 'faust:main'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py313'
